--- a/slides/2/2.html
+++ b/slides/2/2.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="/node_modules/reveal.js/css/reveal.css">
-  <link rel="stylesheet" href="/node_modules/reveal.js/css/theme/white.css" id="theme">
-  <link rel="stylesheet" href="/node_modules/reveal.js/lib/css/zenburn.css">
+  <link rel="stylesheet" href="../../node_modules/reveal.js/css/reveal.css">
+  <link rel="stylesheet" href="../../node_modules/reveal.js/css/theme/white.css" id="theme">
+  <link rel="stylesheet" href="../../node_modules/reveal.js/lib/css/zenburn.css">
   <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
@@ -14,8 +14,8 @@
       </section>
     </div>
   </div>
-  <script src="/node_modules/reveal.js/lib/js/head.min.js"></script>
-  <script src="/node_modules/reveal.js/js/reveal.js"></script>
+  <script src="../../node_modules/reveal.js/lib/js/head.min.js"></script>
+  <script src="../../node_modules/reveal.js/js/reveal.js"></script>
   <script>
     Reveal.initialize({
       controls: true,
@@ -24,13 +24,13 @@
       center: true,
       // Optional libraries used to extend on reveal.js
       dependencies: [
-        { src: '/node_modules/reveal.js/lib/js/classList.js', condition: function () { return !document.body.classList; } },
-        { src: '/node_modules/reveal.js/plugin/markdown/marked.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
-        { src: '/node_modules/reveal.js/plugin/markdown/markdown.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
-        { src: '/node_modules/reveal.js/plugin/highlight/highlight.js', async: true, callback: function () { hljs.initHighlightingOnLoad(); } },
-        { src: '/node_modules/reveal.js/plugin/notes/notes.js' },
-        { src: '/node_modules/reveal.js-menu/menu.js' },
-        { src: '/node_modules/reveal.js-chalkboard/chalkboard.js' }
+        { src: '../../node_modules/reveal.js/lib/js/classList.js', condition: function () { return !document.body.classList; } },
+        { src: '../../node_modules/reveal.js/plugin/markdown/marked.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
+        { src: '../../node_modules/reveal.js/plugin/markdown/markdown.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
+        { src: '../../node_modules/reveal.js/plugin/highlight/highlight.js', async: true, callback: function () { hljs.initHighlightingOnLoad(); } },
+        { src: '../../node_modules/reveal.js/plugin/notes/notes.js' },
+        { src: '../../node_modules/reveal.js-menu/menu.js' },
+        { src: '../../node_modules/reveal.js-chalkboard/chalkboard.js' }
       ],
       options: {
         "highlightTheme": "darkula"
@@ -73,17 +73,17 @@
         // Specifies the themes that will be available in the themes
         // menu panel. Set to 'false' to hide themes panel.
         themes: [
-          { name: 'Black', theme: '/node_modules/reveal.js/css/theme/black.css' },
-          { name: 'White', theme: '/node_modules/reveal.js/css/theme/white.css' },
-          { name: 'League', theme: '/node_modules/reveal.js/css/theme/league.css' },
-          { name: 'Sky', theme: '/node_modules/reveal.js/css/theme/sky.css' },
-          { name: 'Beige', theme: '/node_modules/reveal.js/css/theme/beige.css' },
-          { name: 'Simple', theme: '/node_modules/reveal.js/css/theme/simple.css' },
-          { name: 'Serif', theme: '/node_modules/reveal.js/css/theme/serif.css' },
-          { name: 'Blood', theme: '/node_modules/reveal.js/css/theme/blood.css' },
-          { name: 'Night', theme: '/node_modules/reveal.js/css/theme/night.css' },
-          { name: 'Moon', theme: '/node_modules/reveal.js/css/theme/moon.css' },
-          { name: 'Solarized', theme: '/node_modules/reveal.js/css/theme/solarized.css' }
+          { name: 'Black', theme: '../../node_modules/reveal.js/css/theme/black.css' },
+          { name: 'White', theme: '../../node_modules/reveal.js/css/theme/white.css' },
+          { name: 'League', theme: '../../node_modules/reveal.js/css/theme/league.css' },
+          { name: 'Sky', theme: '../../node_modules/reveal.js/css/theme/sky.css' },
+          { name: 'Beige', theme: '../../node_modules/reveal.js/css/theme/beige.css' },
+          { name: 'Simple', theme: '../../node_modules/reveal.js/css/theme/simple.css' },
+          { name: 'Serif', theme: '../../node_modules/reveal.js/css/theme/serif.css' },
+          { name: 'Blood', theme: '../../node_modules/reveal.js/css/theme/blood.css' },
+          { name: 'Night', theme: '../../node_modules/reveal.js/css/theme/night.css' },
+          { name: 'Moon', theme: '../../node_modules/reveal.js/css/theme/moon.css' },
+          { name: 'Solarized', theme: '../../node_modules/reveal.js/css/theme/solarized.css' }
         ],
 
         // Specifies if the transitions menu panel will be shown.
@@ -131,8 +131,8 @@
         theme: "chalkboard",
         // configuration options for notes canvas and chalkboard
         color: ['rgba(0,0,255,1)', 'rgba(255,255,255,0.5)'],
-        background: ['rgba(127,127,127,.1)', '/node_modules/reveal.js-chalkboard/img/blackboard.png'],
-        pen: ['url(/node_modules/reveal.js-chalkboard/img/boardmarker.png), auto', 'url(/node_modules/reveal.js-chalkboard/img/chalk.png), auto'],
+        background: ['rgba(127,127,127,.1)', '../../node_modules/reveal.js-chalkboard/img/blackboard.png'],
+        pen: ['url(../../node_modules/reveal.js-chalkboard/img/boardmarker.png), auto', 'url(../../node_modules/reveal.js-chalkboard/img/chalk.png), auto'],
       },
       keyboard: {
         67: function () { RevealChalkboard.toggleNotesCanvas() },	// toggle notes canvas when 'c' is pressed
