--- a/slides/16/index.html
+++ b/slides/16/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="reveal">
     <div class="slides">
-      <section data-markdown="README.md" data-separator="~~~" data-separator-vertical="~~" data-separator-notes="^Note:" data-charset="utf-8">
+      <section data-markdown="README.md" data-separator="---" data-separator-vertical="~~" data-separator-notes="^Note:" data-charset="utf-8">
       </section>
     </div>
   </div>
